--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## local MariaDB settings
 # docker exec -it mariaDB /bin/bash
-spring.datasource.url=jdbc:mariadb://localhost:3306/secretmessage
-spring.datasource.username=user
-spring.datasource.password=1234
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
